--- a/app/views/user_mailer/reset_password_email.html.erb
+++ b/app/views/user_mailer/reset_password_email.html.erb
@@ -1,8 +1,8 @@
-Hello, <%= @user.email %>
-===============================================
+Hi <%= @user.first_name %>,
 
-You have requested to reset your password.
+You have requested to reset your openfn.org password.
 
-To choose a new password, just follow this link: <%= @url %>.
+To set a new password, follow this link: <%= @url %>.
 
-Have a great day!
+Best,
+Openfn.org
