A User can add configure a product [#154 #155]
- Add POST #create to ConnectionProfilesController
- User has many Credentials through ConnectionProfile
- Credential belongs_to ConnectionProfile
- Remove unneeded foreign key on Credential
- Fix foreign key column name with migration
- Tidy models + specs
- Fix migrations
- Add product credential modal
- Add OdkCredential and SalesforceCredential models
- User can configure a product
- User can create a ConnectionProfile for a Product
- ConnectionProfile credentials are verified with the provider
- ConnectionProfile credentials are verified before saving the profile
- Refactor Credential and ConnectionProfile creation flow
- Remove unneeded SalesforceCredential attributes
- Improve modal styling
- Fix indentation

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -57,3 +57,18 @@
     padding-left: 15px;
   }
 }
+
+#connectionProfileModal {
+  h3, label {
+    color: #428bca;
+  }
+
+  label {
+    font-weight: normal;
+  }
+
+  .input-group {
+    margin-top: 10px;
+    width: 100%;
+  }
+}
