Refactored the seperation between rails and angular routes. #165
This is an interesting one. Instead of redirecting to
`/?goto=xyz`, I've let the rails view render the angular bootstrapping
layout.

This makes the routing simpler, and easier to earmark places that
are now in angular.

We need to test the navigation stuff a bit, as there might be a
few outliers.

We also need to look out for double logging, but I'm fairly confident
this wont be the case after this.

--- a/app/views/odk_sf_legacy/mappings/index.html.erb
+++ b/app/views/odk_sf_legacy/mappings/index.html.erb
@@ -21,8 +21,7 @@
 
         <div class="col-md-2 text-center">
           
-          
-            <%= button_to "Create new map", [:new, :odk_sf_legacy_mapping], class: 'btn btn-default' %><br>
+          <%= link_to "Create new map", "/mappings/new", class: 'btn btn-default' %><br>
           
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle btn-success" data-toggle="dropdown" aria-expanded="false">
