--- a/app/views/odk_sf_legacy/mappings/index.html.erb
+++ b/app/views/odk_sf_legacy/mappings/index.html.erb
@@ -21,12 +21,7 @@
 
         <div class="col-md-2 text-center">
           
-          <% if Features.new_mapping_page? %>
-            <a href="#/mappings/new" class="btn btn-default">Create new map</a>
-          <% else %>
-            <%= button_to "Create new map", [:new, :odk_sf_legacy_mapping], class: 'btn btn-default' %>
-          <% end %>
-          <br>
+          <%= link_to "Create new map", "/mappings/new", class: 'btn btn-default' %><br>
           
           <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle btn-success" data-toggle="dropdown" aria-expanded="false">
