new footer, fixed shadow for header, needs user page fix

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,24 +1,29 @@
-<div class="ideas">
-    <footer>
-      <div class="row">
-        <div class="col-sm-10 col-sm-offset-1">
-          <p class="text-center">
-            Open[Fn] needs your help. We're currently seeking editors, developers, and funding.
-            <br>Contact us if you'd like to pitch in. We believe in open-source, and all of our code is available on Github under the GPLv3.0 license.
-          </p>
-        </div>
-      </div>
-      <div class="row">
+<footer class="footer">
+  <div class="footer-shadow-xs"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+
         <p class="text-center">
-          <a href="mailto:admin@openfn.org">
-            <i class="fa fa-envelope-o fa-2x"></i>
-          </a>
-          &nbsp;
+          Openfn.org is a non-profit and all of our code is open source. We need your help.
+          <br><br>
           <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
-            <i class="fa fa-github fa-2x"></i>
-          </a>
+            Join our family of developers <i class="fa fa-github fa-lg"></i>
+          </a>, 
+          <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
+           make a donation <i class="fa fa-dollar fa-lg"></i>
+          </a>, or follow us on 
+          <a href="https://www.facebook.com/openfn" target="_blank">
+            <i class="fa fa-facebook fa-lg"></i> 
+          </a>, 
+          <a href="https://twitter.com/openfn" target="_blank">
+            <i class="fa fa-twitter fa-lg"></i>
+          </a> , and 
+          <a href="https://medium.com/@openFn/" target="_blank">
+            <i class="fa fa-medium fa-lg"></i>
+          </a> .
         </p>
       </div>
-    </footer> 
+    </div>
   </div>
-</div>
+</footer>
