remove footer when current_user

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,8 +51,8 @@
     <div class='growl-wrapper'>
       <div growl></div>
     </div>
-
+    <% unless current_user %>
     <%= render "shared/footer" %>
-
+    <% end %>
   </body>
 </html>
