--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,8 +51,8 @@
   <div class='col-md-12'>
     <%= yield %>
   </div>
-
+  <% unless current_user %>
   <%= render "shared/footer" %>
-
+  <% end %>
 </body>
 </html>
