--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,13 @@
 
   <% if Features.ga_tracking_code? %>
     <script>
-
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
     ga('create', '<%= Features.ga_tracking_code %>', 'auto');
     <%# We need to do a 'send' from the Rails views %>
     ga('send', 'pageview');
-
     </script>
   <% end %>
 
@@ -51,8 +48,8 @@
   <div class='col-md-12'>
     <%= yield %>
   </div>
-  <% unless current_user %>
-  <%= render "shared/footer" %>
-  <% end %>
+  <!-- <% unless current_user %> -->
+    <%= render "shared/footer" %>
+  <!-- <% end %> -->
 </body>
 </html>
