--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,8 +10,8 @@
           <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
             Join our family of developers <i class="fa fa-github fa-lg"></i>
           </a>, 
-          <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
-           make a donation <i class="fa fa-dollar fa-lg"></i>
+          <a href="mailto:admin@openfn.org" target="_blank">
+           share your ideas <i class="fa fa-envelope-o fa-lg"></i>
           </a>, or follow us on 
           <a href="https://www.facebook.com/openfn" target="_blank">
             <i class="fa fa-facebook fa-lg"></i> 
