--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,12 +15,10 @@
 
   <% if Features.ga_tracking_code? %>
     <script>
-
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
     ga('create', '<%= Features.ga_tracking_code %>', 'auto');
     // ga('send', 'pageview');
     </script>
@@ -51,8 +49,8 @@
     <div class='growl-wrapper'>
       <div growl></div>
     </div>
-    <% unless current_user %>
-    <%= render "shared/footer" %>
-    <% end %>
+    <!-- <% unless current_user %> -->
+      <%= render "shared/footer" %>
+    <!-- <% end %> -->
   </body>
 </html>
