footer edits for mapping page and user page div cleanup

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -37,9 +37,7 @@ table {
 
 
 .odk-row {
-  padding-bottom: 150px;
-  //background-color: $bg-color;
-
+  // padding-bottom: 150px;
 
   .odk-fields {
     max-height: 400px;
