header edit, release notes overhaul

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,55 +4,44 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-
       <button type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span><i class="fa fa-bars" style="color: #3f5666"></i>
       </button>
-      <a class="navbar-brand" href="/">open[fn]</a>
+      <a class="navbar-brand" href="/">open[Fn]</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse" collapse="isCollapsed">
-
       <ul class="nav navbar-nav">
         <li>
           <%= link_to "Marketplace", "/#/marketplace"%>
         </li>
-        
+        <li>
+          <%= link_to "Integrations", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+        </li>
+        <li>
+          <%= link_to "Content", "/#/release-notes"%>
+        </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Integrations <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> More <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li>
-                <%= link_to "Mappings", odk_sf_legacy_mappings_path, 'ng-click' => "$event.stopPropagation()" %>
-              </li>
               <% unless current_user %>
                 <li>
-                  <%= link_to "Plans", "/#/pricing" %>
+                  <%= link_to "Pricing", "/#/pricing" %>
                 </li>
               <% end %>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Ideas <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
               <li>
-                <a href="#">Case studies (soon)</a>
+                <%= link_to "About us (soon)", "#"%>
               </li>
               <li>
-                <a href="#">Reviews (soon)</a>
-              </li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Release Notes", "/#/release-notes"%>
-              </li>
-              <li>
-                <%= link_to "Developers", "/#/developers"%>
+                <%= link_to "Build new integrations", "/#/developers"%>
               </li>
             </ul>
         </li>
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
+<!--         <li>
+          <%= link_to "Donate", "#"%>
+        </li> -->
         <% if current_user && current_user.admin? %>
           <li>
             <%= link_to "/#/metrics/organisation" do %>
