--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -98,6 +98,25 @@
     color: $off-white;
   }
 
+  .rn-content {
+    color: $off-white;
+    padding-right: 20px;
+  }
+
+  .rn-title {
+    color: $off-white;
+    font-size: rem-calc(28px);
+    font-weight: $bold;
+    text-transform: uppercase;
+    padding-right: 20px;
+
+    &.show {
+      font-size: rem-calc(42px);
+      margin-top: -30px;
+      margin-bottom: -15px;
+    }
+  }
+
   .tile-tweet {
     color: $off-white;
     font-size: rem-calc(20px);
