slightly better mobile layout for blog

--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -100,7 +100,8 @@
 
   .rn-content {
     color: $off-white;
-    padding-right: 20px;
+    padding-top: 24px;
+    padding-right: 24px;
   }
 
   .rn-title {
