--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
       })
     </script>
 
+    <script async src="https://static.medium.com/embed.js"></script>
+
   </head>
   <body>
     <%= render "shared/header" %>
