footer color, product tags, blog index

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -51,7 +51,7 @@ body {
     right: 0;
     height: 60px;
     color: black;
-    background-color: $accent-yellow;
+    background-color: $cream;
     padding-top: 10px;
     background-image: image-url("noise.png");
     -moz-box-shadow: 0 -8px 8px rgba(0,0,0,0.25);
