--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -171,7 +171,7 @@
 
   .vote-link {
     color: #384D5C;
-    padding: 1.65em;
+    padding: 0.8em;
     position: absolute;
     bottom: 0.0em;
     right: 1em;
@@ -182,11 +182,11 @@
 
   .vote-count {
     color: $accent-yellow;
-    font-size: 1.22em;
-    padding: 1.65em;
+    // font-size: 1.22em;
+    padding: 0.8em;
     position: absolute;
     bottom: 0.0em;
-    right: 4.5em;
+    right: 4em;
     // cursor: pointer;
     // background-color: $grey-blue;
     // background-image: image-url("noise.png");
@@ -194,7 +194,7 @@
 
   .website-link {
     color: #384D5C;
-    padding: 1.65em;
+    padding: 0.8em;
     position: absolute;
     bottom: 0.0em;
     left: 1em;
@@ -273,12 +273,15 @@
   .tag-list {
     // margin: 0.8em;
     text-align: center;
+
     .tag {
       margin-right: 0.5em;
+      margin-top: 0.5em;
       background-color: $bg-color;
       font-size: rem-calc(14px);
       text-transform: uppercase;
-      text-align: center;
+      display: inline-block;
+
     }
   }
 }
