--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
       <div class="col-xs-12">
 
         <p class="text-center">
-          Openfn.org is a non-profit and all of our code is open source. We need your help.
+          Openfn.org is a non-profit and all of our code is open source.
           <br><br>
           <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
             Join our family of developers <i class="fa fa-github fa-lg"></i>
