--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,18 @@
 
   </head>
   <body>
-    <%= render "shared/header" %>
-    <%= render "shared/flash" %>
-    <%= yield %>
+    <div id="wrap">
+      <div id="main">
+        <%= render "shared/header" %>
+        <%= render "shared/flash" %>
+        <%= yield %>
     
 
 
-    <%= render "shared/footer" %>
+      </div>
+    </div>
+    <footer class="footer">
+      <%= render "shared/footer" %>
+    </footer>
   </body>
 </html>
